--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -228,9 +228,9 @@ jobs:
                       php/tests/**/*.out
 
     test-php-asan:
-        name: PHP ASAN Tests - EngineVersion ${{ matrix.engine.version }}
+        name: PHP ASAN Tests - EngineVersion ${{ matrix.engine.version }} (macOS)
         needs: get-matrices
-        runs-on: ubuntu-latest
+        runs-on: macos-latest
         timeout-minutes: 45
         strategy:
             fail-fast: false
@@ -253,17 +253,17 @@ jobs:
                       php/include/
                       php/src/*.pb-c.c
                       php/src/*.pb-c.h
-                  key: ubuntu-latest-php-asan-${{ env.BASE_PHP_VERSION }}
+                  key: macos-latest-php-asan-${{ env.BASE_PHP_VERSION }}
                   restore-keys: |
-                      ubuntu-latest-php-asan
-                      ubuntu-latest-php
-                      ubuntu-latest-glide-core
-                      ubuntu-latest
+                      macos-latest-php-asan
+                      macos-latest-php
+                      macos-latest-glide-core
+                      macos-latest
 
             - name: Install shared dependencies
               uses: ./.github/workflows/install-shared-dependencies
               with:
-                  target: x86_64-unknown-linux-gnu
+                  target: x86_64-apple-darwin
                   github-token: ${{ secrets.GITHUB_TOKEN }}
                   engine-version: ${{ matrix.engine.version }}
 
@@ -288,18 +288,11 @@ jobs:
 
             - name: Install system dependencies for PHP ASAN build
               run: |
-                  sudo apt-get update
-                  sudo apt-get install -y \
-                      php${{ env.BASE_PHP_VERSION }}-dev \
-                      build-essential \
-                      autoconf \
-                      automake \
-                      libtool \
-                      pkg-config \
-                      libssl-dev \
-                      protobuf-c-compiler \
-                      libprotobuf-c-dev \
-                      libprotobuf-c1
+                  # Install required tools via Homebrew
+                  brew install autoconf automake libtool pkg-config protobuf-c
+                  
+                  # Ensure Xcode Command Line Tools are installed (required for ASAN)
+                  xcode-select --install || echo "Xcode Command Line Tools already installed"
 
             - name: Start Valkey servers
               working-directory: php/tests
