--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -547,13 +547,12 @@ jobs:
                   echo "Extension exists: $(ls -la modules/valkey_glide.so 2>/dev/null || echo 'NOT FOUND')"
                   echo "Config file exists: $(ls -la ext.ini 2>/dev/null || echo 'NOT FOUND')"
                   echo "Test file exists: $(ls -la tests/TestValkeyGlide.php 2>/dev/null || echo 'NOT FOUND')"
-                  echo "Suppressions file exists: $(ls -la valgrind.supp 2>/dev/null || echo 'NOT FOUND')"
                   echo "Valgrind version: $(valgrind --version)"
                                    
                   # Step 7: Run Valgrind tests
                   echo ""
                   echo "=== Step 7: Running Valgrind memory analysis ==="
-                  echo "Command: valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all --track-origins=yes --verbose --suppressions=valgrind.supp php -n -c ext.ini tests/TestValkeyGlide.php"
+                  echo "Command: valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all --track-origins=yes --verbose php -n -c ext.ini tests/TestValkeyGlide.php"
                   echo ""
                   
                   # Run Valgrind with output to both terminal and log file
