--- a/.github/workflows/ort.yml
+++ b/.github/workflows/ort.yml
@@ -145,28 +145,28 @@ jobs:
               with:
                   folder_path: "${{ github.workspace }}/ffi"
 
-              ### Java ###
-            - name: Set up JDK 11
-              uses: actions/setup-java@v4
-              with:
-                  distribution: "temurin"
-                  java-version: 11
+              ### Java ### (Temporarily disabled due to compilation issues)
+            # - name: Set up JDK 11
+            #   uses: actions/setup-java@v4
+            #   with:
+            #       distribution: "temurin"
+            #       java-version: 11
 
-            - name: Install protoc (protobuf)
-              uses: arduino/setup-protoc@v3
-              with:
-                  version: "29.1"
-                  repo-token: ${{ secrets.GITHUB_TOKEN }}
+            # - name: Install protoc (protobuf)
+            #   uses: arduino/setup-protoc@v3
+            #   with:
+            #       version: "29.1"
+            #       repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-            - name: Build java artifact
-              working-directory: ./java
-              run: |
-                  ./gradlew publishToMavenLocal -x buildRust -x javadoc
+            # - name: Build java artifact
+            #   working-directory: ./java
+            #   run: |
+            #       ./gradlew publishToMavenLocal -x buildRust -x javadoc
 
-            - name: Run ORT tools for Java
-              uses: ./.github/workflows/run-ort-tools
-              with:
-                  folder_path: "${{ github.workspace }}/java"
+            # - name: Run ORT tools for Java
+            #   uses: ./.github/workflows/run-ort-tools
+            #   with:
+            #       folder_path: "${{ github.workspace }}/java"
 
               ### GO ###
             - name: Set up GO
@@ -263,14 +263,15 @@ jobs:
                   cp python/ort_results/NOTICE_DEFAULT $PYTHON_ATTRIBUTIONS
                   cp node/ort_results/NOTICE_DEFAULT $NODE_ATTRIBUTIONS
                   cp glide-core/ort_results/NOTICE_DEFAULT $RUST_ATTRIBUTIONS
-                  cp java/ort_results/NOTICE_DEFAULT $JAVA_ATTRIBUTIONS
-                  cp php/ort_results/NOTICE_DEFAULT $PHP_ATTRIBUTIONS
+                  # Skip Java due to compilation issues: cp java/ort_results/NOTICE_DEFAULT $JAVA_ATTRIBUTIONS
                   : Workaround for empty attributions for go packages. See discussions in https://github.com/valkey-io/valkey-glide/pull/3469 and in https://github.com/oss-review-toolkit/ort/issues/10454
                   curl https://raw.githubusercontent.com/valkey-io/valkey-glide/9c9ef0ae2c2ee865c7867f6ac0d3f9aac054bac8/go/THIRD_PARTY_LICENSES_GO -o $GO_ATTRIBUTIONS
                   cat go/ort_results/NOTICE_DEFAULT >> $GO_ATTRIBUTIONS
+                  cat php/ort_results/NOTICE_DEFAULT >> $PHP_ATTRIBUTIONS
                   : Merge FFI attributions into GO attributions
                   cat ffi/ort_results/NOTICE_DEFAULT >> $GO_ATTRIBUTIONS
-                  GIT_DIFF=`git diff $PYTHON_ATTRIBUTIONS $NODE_ATTRIBUTIONS $RUST_ATTRIBUTIONS $JAVA_ATTRIBUTIONS $GO_ATTRIBUTIONS $PHP_ATTRIBUTIONS`
+                  cat ffi/ort_results/NOTICE_DEFAULT >> $PHP_ATTRIBUTIONS
+                  GIT_DIFF=`git diff $PYTHON_ATTRIBUTIONS $NODE_ATTRIBUTIONS $RUST_ATTRIBUTIONS $GO_ATTRIBUTIONS $PHP_ATTRIBUTIONS`
                   if [ -n "$GIT_DIFF" ]; then
                     echo "FOUND_DIFF=true" >> $GITHUB_ENV
                   else
@@ -286,7 +287,7 @@ jobs:
                   git config --global user.email "valkey-glide@lists.valkey.io"
                   git config --global user.name "ort-bot"
                   git checkout -b ${ORT_DIFF_BRANCH_NAME}
-                  git add $PYTHON_ATTRIBUTIONS $NODE_ATTRIBUTIONS $RUST_ATTRIBUTIONS $JAVA_ATTRIBUTIONS $GO_ATTRIBUTIONS $PHP_ATTRIBUTIONS
+                  git add $PYTHON_ATTRIBUTIONS $NODE_ATTRIBUTIONS $RUST_ATTRIBUTIONS $GO_ATTRIBUTIONS $PHP_ATTRIBUTIONS
                   git commit -m "Updated attribution files" -s
                   git push --set-upstream origin ${ORT_DIFF_BRANCH_NAME} -f
 
@@ -316,7 +317,6 @@ jobs:
                     "${{ env.PYTHON_ATTRIBUTIONS }}"
                     "${{ env.NODE_ATTRIBUTIONS }}"
                     "${{ env.RUST_ATTRIBUTIONS }}"
-                    "${{ env.JAVA_ATTRIBUTIONS }}"
                     "${{ env.GO_ATTRIBUTIONS }}"
                     "${{ env.PHP_ATTRIBUTIONS }}"
                   )
